<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:clipToPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ExploreFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/explore_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:textColor="@color/dark"
        android:textAppearance="@style/Headline4"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/explore_content_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/explore_headline"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/quickstart_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/rules_flexbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    app:justifyContent="space_between"
                    app:flexWrap="wrap"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/restaurants_topic_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:elevation="3dp"
                            android:src="@drawable/food_image"
                            android:layout_gravity="center"
                            app:shapeAppearanceOverlay="@style/RoundedImageView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurants"
                            android:textColor="@color/dark"
                            android:maxWidth="80dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textAppearance="@style/Body1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/coffee_shops_topic_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/coffee_shop_image"
                            android:elevation="3dp"
                            android:layout_gravity="center"
                            app:shapeAppearanceOverlay="@style/RoundedImageView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coffee_shops"
                            android:textColor="@color/dark"
                            android:layout_gravity="center"
                            android:maxWidth="80dp"
                            android:textAlignment="center"
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textAppearance="@style/Body1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pharmacies_topic_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/pharmacy_image"
                            android:elevation="3dp"
                            android:layout_gravity="center"
                            app:shapeAppearanceOverlay="@style/RoundedImageView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pharmacies"
                            android:textColor="@color/dark"
                            android:maxWidth="80dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textAppearance="@style/Body1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tourist_attractions_topic_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/travel_image"
                            android:elevation="3dp"
                            android:layout_gravity="center"
                            app:shapeAppearanceOverlay="@style/RoundedImageView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tourist_attractions"
                            android:textColor="@color/dark"
                            android:layout_gravity="center"
                            android:maxWidth="80dp"
                            android:textAlignment="center"
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textAppearance="@style/Body1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hotels_topic_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/hotel_image"
                            android:elevation="3dp"
                            android:layout_gravity="center"
                            app:shapeAppearanceOverlay="@style/RoundedImageView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotels"
                            android:layout_gravity="center"
                            android:textColor="@color/dark"
                            android:maxWidth="80dp"
                            android:textAlignment="center"
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textAppearance="@style/Body1" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/transportation_topic_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/metro_image"
                            android:elevation="3dp"
                            android:layout_gravity="center"
                            app:shapeAppearanceOverlay="@style/RoundedImageView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/transportation"
                            android:layout_gravity="center"
                            android:textColor="@color/dark"
                            android:maxWidth="80dp"
                            android:textAlignment="center"
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textAppearance="@style/Body1" />

                    </LinearLayout>

                </com.google.android.flexbox.FlexboxLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>


            <ProgressBar
                android:id="@+id/explore_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/scrollable_sections_recyclerview"
                app:layout_constraintEnd_toEndOf="@id/scrollable_sections_recyclerview"
                app:layout_constraintTop_toTopOf="@id/scrollable_sections_recyclerview"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scrollable_sections_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/quickstart_constraint_layout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>