<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_margin="15dp"
    android:background="@drawable/accessibility_details_shape"
    android:elevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/area_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark"
        android:textStyle="bold"
        android:textAppearance="@style/Subtitle1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RatingBar
        android:id="@+id/location_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/area_details_title"
        app:layout_constraintTop_toTopOf="@id/area_details_title"
        app:layout_constraintStart_toEndOf="@id/area_details_title"/>

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/arrow_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/location_rating"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/accessibility_details_extra_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/area_details_title">

        <TextView
            android:id="@+id/area_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:textAppearance="@style/Body1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/visual_disabilities_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/area_details_description">

            <TextView
                android:id="@+id/area_details_visual_disabilities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_for_visual_disabilities"
                android:textColor="@color/dark"
                android:textStyle="bold"
                android:textAppearance="@style/Body1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <RatingBar
                android:id="@+id/area_details_visual_disabilities_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@id/area_details_title"
                app:layout_constraintTop_toTopOf="@id/area_details_title"
                app:layout_constraintStart_toEndOf="@id/area_details_title"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/auditory_disabilities_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/visual_disabilities_linear_layout">

            <TextView
                android:id="@+id/area_details_auditory_disabilities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_for_auditory_disabilities"
                android:textColor="@color/dark"
                android:textStyle="bold"
                android:textAppearance="@style/Body1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <RatingBar
                android:id="@+id/area_details_auditory_disabilities_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@id/area_details_title"
                app:layout_constraintTop_toTopOf="@id/area_details_title"
                app:layout_constraintStart_toEndOf="@id/area_details_title"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movement_disabilities_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/auditory_disabilities_linear_layout">

            <TextView
                android:id="@+id/area_details_movement_disabilities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_for_movement_disabilities"
                android:textColor="@color/dark"
                android:textStyle="bold"
                android:textAppearance="@style/Body1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <RatingBar
                android:id="@+id/area_details_movement_disabilities_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@id/area_details_title"
                app:layout_constraintTop_toTopOf="@id/area_details_title"
                app:layout_constraintStart_toEndOf="@id/area_details_title"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>